--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "build-storybook": "build-storybook",
+    "start-storybook": "start-storybook",
+    "chromatic": "CHROMATIC_APP_CODE=znx11n5ub3j chromatic"
   },
   "private": true,
   "dependencies": {
@@ -56,7 +59,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
-    "storybook-chromatic": "^3.0.3",
+    "storybook-chromatic": "^3.1.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
