--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "storybook": "start-storybook",
-    "build-storybook": "build-storybook",
+    "build-storybook": "build-storybook -c .storybook -o .out",
     "start-storybook": "start-storybook",
-    "chromatic": "CHROMATIC_APP_CODE=znx11n5ub3j chromatic"
+    "chromatic": "CHROMATIC_APP_CODE=znx11n5ub3j chromatic",
+    "deploy-storybook": "storybook-to-ghpages"
   },
   "private": true,
   "dependencies": {
@@ -45,6 +46,7 @@
     "@storybook/addon-storysource": "^5.2.5",
     "@storybook/addons": "^5.2.4",
     "@storybook/angular": "^5.2.3",
+    "@storybook/storybook-deployer": "^2.8.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
